Update Alfabetização dos Continentes.qmd

--- a/Alfabetização dos Continentes.qmd
+++ b/Alfabetização dos Continentes.qmd
@@ -47,7 +47,7 @@ A alfabetização é um processo de aprendizado que capacita o indivíduo a ler,
 
 ## Qual a sua importância?
 
-um alto índice de alfabetização não apenas melhora a vida individual de cada cidadão, mas também traz benefícios econômicos, sociais, culturais e democráticos para toda a sociedade.
+Um alto índice de alfabetização não apenas melhora a vida individual de cada cidadão, mas também traz benefícios econômicos, sociais, culturais e democráticos para toda a sociedade.
 
 #### Benefícios para o indivíduo
 
